fixing array sizing
Former-commit-id: 71e6c9728211c574176595ce616e5aa09c9cceb6

--- a/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
@@ -7,6 +7,10 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "import IPython\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -339,7 +343,7 @@
     "    \n",
     "    mask = decode(encoding)\n",
     "    \n",
-    "    return image, mask, encoding\n",
+    "    return image[None, ...], mask[None, ...], encoding\n",
     "\n",
     "\n",
     "def get_dataset(keys, image_paths, labels):\n",
@@ -369,7 +373,8 @@
     "\n",
     "\n",
     "train_dataset = get_dataset(train_keys, image_paths, labels)\n",
-    "train_dataset.batch(1)"
+    "test_dataset = get_dataset(test_keys, image_paths, labels)\n",
+    "# train_dataset.batch(1)"
    ]
   },
   {
@@ -387,24 +392,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# x = np.arange(0, IMG_SIZE)\n",
-    "# y = np.arange(0, IMG_SIZE)\n",
-    "\n",
-    "# for image, mask, encoding in train_dataset.take(10):\n",
-    "#     field_centre, field_rotation, bb_centre = extract_items_from_encoding(encoding)\n",
-    "    \n",
-    "#     fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "#         x, y, np.array(image)[:,:,0],\n",
-    "#         np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
-    "#         bb_diameter, edge_lengths, penumbra, units=''\n",
-    "#     )\n",
-    "\n",
-    "#     plt.contour(x, y, mask[:,:,0], [0], cmap='bwr_r', zorder=20)\n",
-    "#     plt.contour(x, y, mask[:,:,1], [0], cmap='bwr_r', zorder=20)\n",
-    "    \n",
-    "#     plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -548,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_output = generator(sample_image[tf.newaxis,...], training=False)\n",
+    "gen_output = generator(sample_image, training=False)\n",
     "plt.imshow(gen_output[0,...,0])"
    ]
   },
@@ -566,7 +554,344 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "LAMBDA = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generator_loss(disc_generated_output, gen_output, target):\n",
+    "    gan_loss = loss_object(tf.ones_like(disc_generated_output), disc_generated_output)\n",
+    "\n",
+    "    # mean absolute error\n",
+    "    l1_loss = tf.reduce_mean(tf.abs(target - gen_output))\n",
+    "\n",
+    "    total_gen_loss = gan_loss + (LAMBDA * l1_loss)\n",
+    "\n",
+    "    return total_gen_loss, gan_loss, l1_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Discriminator():\n",
+    "    initializer = tf.random_normal_initializer(0., 0.02)\n",
+    "\n",
+    "    inp = tf.keras.layers.Input(shape=[128, 128, 1], name='input_image')\n",
+    "    tar = tf.keras.layers.Input(shape=[128, 128, 2], name='target_image')\n",
+    "\n",
+    "    x = tf.keras.layers.concatenate([inp, tar]) # (bs, 256, 256, channels*2)\n",
+    "\n",
+    "    down1 = downsample(128, 4, False)(x) # (bs, 64, 64, 128)\n",
+    "    down2 = downsample(256, 4)(down1) # (bs, 32, 32, 256)\n",
+    "\n",
+    "    zero_pad1 = tf.keras.layers.ZeroPadding2D()(down2) # (bs, 34, 34, 256)\n",
+    "    conv = tf.keras.layers.Conv2D(\n",
+    "        512, 4, strides=1,\n",
+    "        kernel_initializer=initializer,\n",
+    "        use_bias=False)(zero_pad1) # (bs, 31, 31, 512)\n",
+    "\n",
+    "    batchnorm1 = tf.keras.layers.BatchNormalization()(conv)\n",
+    "\n",
+    "    leaky_relu = tf.keras.layers.LeakyReLU()(batchnorm1)\n",
+    "\n",
+    "    zero_pad2 = tf.keras.layers.ZeroPadding2D()(leaky_relu) # (bs, 33, 33, 512)\n",
+    "\n",
+    "    last = tf.keras.layers.Conv2D(\n",
+    "        1, 4, strides=1,\n",
+    "        kernel_initializer=initializer)(zero_pad2) # (bs, 30, 30, 1)\n",
+    "\n",
+    "    return tf.keras.Model(inputs=[inp, tar], outputs=last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discriminator = Discriminator()\n",
+    "tf.keras.utils.plot_model(discriminator, show_shapes=True, dpi=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disc_out = discriminator([sample_image, gen_output], training=False)\n",
+    "plt.imshow(disc_out[0,...,-1], vmin=-20, vmax=20, cmap='RdBu_r')\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_object = tf.keras.losses.BinaryCrossentropy(from_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def discriminator_loss(disc_real_output, disc_generated_output):\n",
+    "    real_loss = loss_object(tf.ones_like(disc_real_output), disc_real_output)\n",
+    "\n",
+    "    generated_loss = loss_object(tf.zeros_like(disc_generated_output), disc_generated_output)\n",
+    "\n",
+    "    total_disc_loss = real_loss + generated_loss\n",
+    "\n",
+    "    return total_disc_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
+    "discriminator_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_dir = './training_checkpoints'\n",
+    "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
+    "checkpoint = tf.train.Checkpoint(generator_optimizer=generator_optimizer,\n",
+    "                                 discriminator_optimizer=discriminator_optimizer,\n",
+    "                                 generator=generator,\n",
+    "                                 discriminator=discriminator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_images(model, image, ground_truth):\n",
+    "    prediction = model(image, training=True)\n",
+    "    plt.figure(figsize=(12,5))\n",
+    "\n",
+    "    display_masks = [ground_truth[0], prediction[0]]\n",
+    "    \n",
+    "    title = ['Ground Truth', 'Predicted']\n",
+    "\n",
+    "    for i in range(2):\n",
+    "        plt.subplot(1, 2, i+1)\n",
+    "        plt.title(title[i])\n",
+    "        mask = display_masks[i]\n",
+    "        \n",
+    "        print(np.shape(mask))\n",
+    "        \n",
+    "        plt.pcolormesh(x - 0.5, y - 0.5, image[0,:,:,0])\n",
+    "        plt.contour(x, y, mask[:,:,0], [0], cmap='bwr_r', zorder=20)\n",
+    "        plt.contour(x, y, mask[:,:,1], [0], cmap='bwr_r', zorder=20)\n",
+    "        plt.axis('equal')\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image, mask, encoding in test_dataset.take(1):\n",
+    "    generate_images(generator, image, mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "log_dir=\"logs/\"\n",
+    "\n",
+    "summary_writer = tf.summary.create_file_writer(\n",
+    "  log_dir + \"fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def train_step(input_image, target, epoch):\n",
+    "    with tf.GradientTape() as gen_tape, tf.GradientTape() as disc_tape:\n",
+    "        gen_output = generator(input_image, training=True)\n",
+    "\n",
+    "        disc_real_output = discriminator([input_image, target], training=True)\n",
+    "        disc_generated_output = discriminator([input_image, gen_output], training=True)\n",
+    "\n",
+    "        gen_total_loss, gen_gan_loss, gen_l1_loss = generator_loss(disc_generated_output, gen_output, target)\n",
+    "        disc_loss = discriminator_loss(disc_real_output, disc_generated_output)\n",
+    "\n",
+    "    generator_gradients = gen_tape.gradient(gen_total_loss,\n",
+    "                                          generator.trainable_variables)\n",
+    "    discriminator_gradients = disc_tape.gradient(disc_loss,\n",
+    "                                               discriminator.trainable_variables)\n",
+    "\n",
+    "    generator_optimizer.apply_gradients(zip(generator_gradients,\n",
+    "                                          generator.trainable_variables))\n",
+    "    discriminator_optimizer.apply_gradients(zip(discriminator_gradients,\n",
+    "                                              discriminator.trainable_variables))\n",
+    "\n",
+    "    with summary_writer.as_default():\n",
+    "        tf.summary.scalar('gen_total_loss', gen_total_loss, step=epoch)\n",
+    "        tf.summary.scalar('gen_gan_loss', gen_gan_loss, step=epoch)\n",
+    "        tf.summary.scalar('gen_l1_loss', gen_l1_loss, step=epoch)\n",
+    "        tf.summary.scalar('disc_loss', disc_loss, step=epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit(train_ds, epochs, test_ds):\n",
+    "    for epoch in range(epochs):\n",
+    "        start = time.time()\n",
+    "\n",
+    "        IPython.display.clear_output(wait=True)\n",
+    "\n",
+    "        for example_input, example_target, _ in test_ds.take(1):\n",
+    "            generate_images(generator, example_input, example_target)\n",
+    "        print(\"Epoch: \", epoch)\n",
+    "\n",
+    "        # Train\n",
+    "        for n, (input_image, target, _) in train_ds.enumerate():\n",
+    "            print('.', end='')\n",
+    "            if (n+1) % 100 == 0:\n",
+    "                print()\n",
+    "            train_step(input_image, target, epoch)\n",
+    "        print()\n",
+    "\n",
+    "        # saving (checkpoint) the model every 20 epochs\n",
+    "        if (epoch + 1) % 20 == 0:\n",
+    "            checkpoint.save(file_prefix = checkpoint_prefix)\n",
+    "\n",
+    "        print ('Time taken for epoch {} is {} sec\\n'.format(epoch + 1,\n",
+    "                                                            time.time()-start))\n",
+    "    checkpoint.save(file_prefix = checkpoint_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir {log_dir}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit(train_dataset, EPOCHS, test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# x = np.arange(0, IMG_SIZE)\n",
+    "# y = np.arange(0, IMG_SIZE)\n",
+    "\n",
+    "# for image, mask, _ in train_dataset.take(1):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x = np.arange(0, IMG_SIZE)\n",
+    "# y = np.arange(0, IMG_SIZE)\n",
+    "\n",
+    "# for image, mask, encoding in train_dataset.take(10):\n",
+    "#     field_centre, field_rotation, bb_centre = extract_items_from_encoding(encoding)\n",
+    "    \n",
+    "#     fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "#         x, y, np.array(image)[:,:,0],\n",
+    "#         np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
+    "#         bb_diameter, edge_lengths, penumbra, units=''\n",
+    "#     )\n",
+    "\n",
+    "#     plt.contour(x, y, mask[:,:,0], [0], cmap='bwr_r', zorder=20)\n",
+    "#     plt.contour(x, y, mask[:,:,1], [0], cmap='bwr_r', zorder=20)\n",
+    "    \n",
+    "#     plt.show()"
+   ]
   }
  ],
  "metadata": {
