dataset no longer erroring once more
Former-commit-id: 1064e6dab89f7055f5263578dcc1a5c263d94026 [formerly 2f48f0464135ae5f626ceedef2a6bad7ee61a982]
Former-commit-id: 66f76aba1ff154ec6d241c7d9027dc68e4e18256

--- a/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
@@ -20,8 +20,7 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
-    "# from tensorflow.keras.layers import BatchNormalization\n",
-    "# BatchNormalization._USE_V2_BEHAVIOR = False"
+    "tf.keras.backend.clear_session()  # For easy reset of notebook state."
    ]
   },
   {
@@ -181,6 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@tf.function\n",
     "def reduce_expanded_mask(expanded_mask):\n",
     "    expanded_mask = tf.dtypes.cast(expanded_mask, tf.float32)\n",
     "    return tf.reduce_mean(tf.reduce_mean(tf.reshape(expanded_mask, (128, 16, 128, 16)), axis=1), axis=2)"
@@ -192,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@tf.function\n",
     "def get_circle_mask(bb_centre):\n",
     "    expanded_mask = (xx_expand - bb_centre[0])**2 + (yy_expand - bb_centre[1])**2 <= bb_radius_sqrd\n",
     "    circle_mask = reduce_expanded_mask(expanded_mask)\n",
@@ -214,6 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@tf.function\n",
     "def get_transformation_matrix(field_centre, field_rotation):\n",
     "    field_rotation_radians = field_rotation / 180 * np.pi\n",
     "    sin = tf.math.sin(field_rotation_radians)\n",
@@ -225,9 +227,11 @@
     "    return tf.convert_to_tensor([[cos, sin, x], [-sin, cos, y], [0, 0, 1]], name=f\"transformation_{rand}\")\n",
     "\n",
     "\n",
+    "@tf.function\n",
     "def apply_transform(xx, yy, transform):\n",
-    "    xx_flat = np.ravel(xx)\n",
-    "    transformed = transform @ np.vstack([xx_flat, np.ravel(yy), np.ones_like(xx_flat)])\n",
+    "    xx_flat = tf.reshape(xx, (-1,))\n",
+    "    yy_flat = tf.reshape(yy, (-1,))\n",
+    "    transformed = tf.matmul(transform, tf.stack([xx_flat, yy_flat, np.ones_like(xx_flat)], axis=0))\n",
     "\n",
     "    xx_transformed = transformed[0]\n",
     "    yy_transformed = transformed[1]\n",
@@ -266,6 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@tf.function\n",
     "def get_rect_mask(field_centre, field_rotation):\n",
     "    field_rotation = field_rotation\n",
     "    \n",
@@ -432,6 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@tf.function\n",
     "def decode_batch(encoding):\n",
     "    \n",
     "    field_centre = [encoding[0, 0, 0, 0], encoding[0, 0, 0, 1]]\n",
@@ -488,9 +494,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "def Generator():\n",
     "    inputs = tf.keras.layers.Input(shape=[128,128,1], batch_size=1)\n",
     "\n",
@@ -519,6 +522,15 @@
     "\n",
     "\n",
     "generator = Generator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generator.trainable_variables"
    ]
   },
   {
@@ -700,8 +712,6 @@
     "        plt.title(title[i])\n",
     "        mask = display_masks[i]\n",
     "        \n",
-    "        print(np.shape(mask))\n",
-    "        \n",
     "        plt.pcolormesh(x - 0.5, y - 0.5, image[0,:,:,0])\n",
     "        plt.contour(x, y, mask[:,:,0], [0], cmap='bwr_r', zorder=20)\n",
     "        plt.contour(x, y, mask[:,:,1], [0], cmap='bwr_r', zorder=20)\n",
@@ -827,13 +837,6 @@
    "source": [
     "fit(train_dataset, EPOCHS, test_dataset)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
