--- a/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
@@ -346,7 +346,7 @@
     "\n",
     "    image = 1 - (image / 127.5)\n",
     "    \n",
-    "    encoding = tf.convert_to_tensor(encoding, dtype=tf)\n",
+    "    encoding = tf.cast(encoding, dtype=tf.float32)\n",
     "    \n",
     "    mask = decode(encoding)\n",
     "    \n",
@@ -461,8 +461,8 @@
    "outputs": [],
    "source": [
     "class DecodeToMask(tf.keras.layers.Layer):\n",
-    "    def __init__(self, input_dim=512):\n",
-    "        super(DecodeToMask, self).__init__()\n",
+    "    def __init__(self, *args, input_dim=512, **kwargs):\n",
+    "        super(DecodeToMask, self).__init__(*args, **kwargs)\n",
     "        units = 5\n",
     "        \n",
     "        w_init = tf.random_normal_initializer()\n",
@@ -476,7 +476,10 @@
     "        \n",
     "    def call(self, inputs):\n",
     "        encodings = tf.matmul(inputs, self.w) + self.b\n",
-    "        return decode_batch(encodings)"
+    "        return decode_batch(encodings)\n",
+    "    \n",
+    "#     def compute_output_shape(self, *args, **kwargs):\n",
+    "#         return (1, 128, 128, 2)"
    ]
   },
   {
