--- a/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
@@ -583,7 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LAMBDA = 100\n",
+    "\n",
     "loss_object = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
     "\n",
     "# loss_object?"
@@ -594,17 +594,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def generator_loss(disc_generated_output, gen_output, target):\n",
-    "    gan_loss = loss_object(tf.ones_like(disc_generated_output), disc_generated_output)\n",
-    "\n",
-    "    # mean absolute error\n",
-    "    l1_loss = tf.reduce_mean(tf.abs(target - gen_output))\n",
-    "\n",
-    "    total_gen_loss = gan_loss + (LAMBDA * l1_loss)\n",
-    "\n",
-    "    return total_gen_loss, gan_loss, l1_loss"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -777,9 +767,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "EPOCHS = 150"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -871,6 +859,46 @@
    "source": [
     "# %load_ext tensorboard\n",
     "# %tensorboard --logdir {log_dir}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generator_loss(disc_generated_output, gen_output, target):   \n",
+    "    rotation_target = target[2]\n",
+    "    rotation_predicted = gen_output[0,0,0,2]\n",
+    "    \n",
+    "    diff_rotation = (rotation_target - rotation_predicted) % 180\n",
+    "    diff_rotation = tf.reduce_min([diff_rotation, 180 - diff_rotation])\n",
+    "    scaled_rotation_diff = tf.reshape(diff_rotation / 90, (-1,))\n",
+    "    \n",
+    "    positions_target = tf.concat((target[0:2], target[3::]), axis=0)\n",
+    "    positions_predicted = tf.concat((gen_output[0,0,0,0:2], gen_output[0,0,0,3::]), axis=-1)\n",
+    "    \n",
+    "    diff_positions = tf.abs(positions_target - positions_predicted)\n",
+    "    diff = tf.concat([diff_positions, scaled_rotation_diff], axis=0)\n",
+    "    \n",
+    "    gan_loss = loss_object(tf.ones_like(disc_generated_output), disc_generated_output)\n",
+    "\n",
+    "    # mean absolute error\n",
+    "    l1_loss = tf.reduce_mean(diff)\n",
+    "\n",
+    "    total_gen_loss = gan_loss + (LAMBDA * l1_loss)\n",
+    "\n",
+    "    return total_gen_loss, gan_loss, l1_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LAMBDA = 5\n",
+    "EPOCHS = 1"
    ]
   },
   {
