scale down the field rotation (very WET)
Former-commit-id: b1d96f795cf44adb7925e7f193e05fa600bb9846 [formerly f0be7e9ad589c925aa751224a589b99a256e583c]
Former-commit-id: d951818c610bf9819425b0f7f5c51b44f6a5057b

--- a/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
@@ -175,7 +175,7 @@
     "    return 63 - np.array(coords)*2\n",
     "\n",
     "def transform_labels(label):\n",
-    "    field_rotation = label['field_rotation']\n",
+    "    field_rotation = label['field_rotation'] / 90\n",
     "    field_centre = transform_to_abs(label['field_centre'])\n",
     "    bb_centre = transform_to_abs(label['bb_centre'])\n",
     "    encoding = [field_centre[0], field_centre[1], field_rotation, bb_centre[0], bb_centre[1]]\n",
@@ -313,7 +313,7 @@
    "source": [
     "def extract_items_from_encoding(encoding):   \n",
     "    field_centre = [encoding[0], encoding[1]]\n",
-    "    field_rotation = encoding[2]\n",
+    "    field_rotation = encoding[2] * 90\n",
     "    bb_centre = [encoding[3], encoding[4]]\n",
     "\n",
     "    return field_centre, field_rotation, bb_centre\n",
@@ -326,7 +326,7 @@
     "    \n",
     "    for encoding in encodings:\n",
     "        field_centres.append([encoding[0,0,0], encoding[0,0,1]])\n",
-    "        field_rotations.append(encoding[0,0,2])\n",
+    "        field_rotations.append(encoding[0,0,2] * 90)\n",
     "        bb_centres.append([encoding[0,0,3], encoding[0,0,4]])\n",
     "    \n",
     "    return field_centres, field_rotations, bb_centres\n",
@@ -452,7 +452,7 @@
     "def decode_batch(encoding):\n",
     "    \n",
     "    field_centre = [encoding[0, 0, 0, 0], encoding[0, 0, 0, 1]]\n",
-    "    field_rotation = encoding[0, 0, 0, 2]\n",
+    "    field_rotation = encoding[0, 0, 0, 2] * 90\n",
     "    bb_centre = [encoding[0, 0, 0, 3], encoding[0, 0, 0, 4]]\n",
     "\n",
     "    circle_mask = get_circle_mask(bb_centre)\n",
@@ -728,11 +728,11 @@
     "    predicted_encoding = model(image, training=True)\n",
     "    \n",
     "    predicted_field_centre = [predicted_encoding[0, 0, 0, 0], predicted_encoding[0, 0, 0, 1]]\n",
-    "    predicted_field_rotation = predicted_encoding[0, 0, 0, 2]\n",
+    "    predicted_field_rotation = predicted_encoding[0, 0, 0, 2] * 90\n",
     "    predicted_bb_centre = [predicted_encoding[0, 0, 0, 3], predicted_encoding[0, 0, 0, 4]]\n",
     "    \n",
     "    ground_field_centre = [ground_truth_encoding[0], ground_truth_encoding[1]]\n",
-    "    ground_field_rotation = ground_truth_encoding[2]\n",
+    "    ground_field_rotation = ground_truth_encoding[2] * 90\n",
     "    ground_bb_centre = [ground_truth_encoding[3], ground_truth_encoding[4]]\n",
     "    \n",
     "    fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
@@ -873,13 +873,13 @@
     "    \n",
     "    diff_rotation = (rotation_target - rotation_predicted) % 180\n",
     "    diff_rotation = tf.reduce_min([diff_rotation, 180 - diff_rotation])\n",
-    "    scaled_rotation_diff = tf.reshape(diff_rotation / 90, (-1,))\n",
+    "    reshaped_rotation_diff = tf.reshape(diff_rotation, (-1,))\n",
     "    \n",
     "    positions_target = tf.concat((target[0:2], target[3::]), axis=0)\n",
     "    positions_predicted = tf.concat((gen_output[0,0,0,0:2], gen_output[0,0,0,3::]), axis=-1)\n",
     "    \n",
     "    diff_positions = tf.abs(positions_target - positions_predicted)\n",
-    "    diff = tf.concat([diff_positions, scaled_rotation_diff], axis=0)\n",
+    "    diff = tf.concat([diff_positions, reshaped_rotation_diff], axis=0)\n",
     "    \n",
     "    gan_loss = loss_object(tf.ones_like(disc_generated_output), disc_generated_output)\n",
     "\n",
