tidy up encoding a little

--- a/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
@@ -73,6 +73,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "BUFFER_SIZE = 400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "training_data_paths = pymedphys.zenodo_data_paths('wlutz_tensorflow_training_data')"
    ]
   },
@@ -312,9 +321,9 @@
    "outputs": [],
    "source": [
     "def extract_items_from_encoding(encoding):   \n",
-    "    field_centre = [encoding[0], encoding[1]]\n",
-    "    field_rotation = encoding[2] * 90\n",
-    "    bb_centre = [encoding[3], encoding[4]]\n",
+    "    field_centre = [encoding[0,0,0], encoding[0,0,1]]\n",
+    "    field_rotation = encoding[0,0,2] * 90\n",
+    "    bb_centre = [encoding[0,0,3], encoding[0,0,4]]\n",
     "\n",
     "    return field_centre, field_rotation, bb_centre\n",
     "\n",
@@ -325,11 +334,12 @@
     "    bb_centres = []\n",
     "    \n",
     "    for encoding in encodings:\n",
-    "        field_centres.append([encoding[0,0,0], encoding[0,0,1]])\n",
-    "        field_rotations.append(encoding[0,0,2] * 90)\n",
-    "        bb_centres.append([encoding[0,0,3], encoding[0,0,4]])\n",
+    "        field_centre, field_rotation, bb_centre = extract_items_from_encoding(encoding)\n",
+    "        field_centres.append(field_centre)\n",
+    "        field_rotations.append(field_rotation)\n",
+    "        bb_centres.append(bb_centre)\n",
     "    \n",
-    "    return field_centres, field_rotations, bb_centres\n",
+    "    return field_centres[0], field_rotations[0], bb_centres[0]\n",
     "\n",
     "def decode(encoding):\n",
     "    return create_mask(*extract_items_from_encoding(encoding))"
@@ -356,10 +366,11 @@
     "    image = 1 - (image / 127.5)\n",
     "    \n",
     "    encoding = tf.cast(encoding, dtype=tf.float32)\n",
+    "    encoding = tf.reshape(encoding, (1,1,5))\n",
     "    \n",
     "    mask = decode(encoding)\n",
     "    \n",
-    "    return image[None, ...], mask[None, ...], encoding\n",
+    "    return image, mask, encoding\n",
     "\n",
     "\n",
     "def get_dataset(keys, image_paths, labels):\n",
@@ -368,6 +379,8 @@
     "\n",
     "    dataset = tf.data.Dataset.from_tensor_slices((image_paths_array, labels_array))\n",
     "    dataset = dataset.map(load)\n",
+    "    dataset = dataset.shuffle(BUFFER_SIZE)\n",
+    "    dataset = dataset.batch(1)\n",
     "    \n",
     "    return dataset"
    ]
@@ -451,12 +464,10 @@
     "@tf.function\n",
     "def decode_batch(encoding):\n",
     "    \n",
-    "    field_centre = [encoding[0, 0, 0, 0], encoding[0, 0, 0, 1]]\n",
-    "    field_rotation = encoding[0, 0, 0, 2] * 90\n",
-    "    bb_centre = [encoding[0, 0, 0, 3], encoding[0, 0, 0, 4]]\n",
+    "    field_centre, field_rotation, bb_centre = extract_items_from_encodings(encodings)\n",
     "\n",
-    "    circle_mask = get_circle_mask(bb_centre)\n",
-    "    rect_mask = get_rect_mask(field_centre, field_rotation)\n",
+    "    circle_mask = get_circle_mask(bb_centres)\n",
+    "    rect_mask = get_rect_mask(field_centres, field_rotations)\n",
     "\n",
     "    mask = tf.concat([circle_mask[None,:,:,None], rect_mask[None,:,:,None]], axis=3)\n",
     "    \n",
@@ -727,13 +738,8 @@
     "def generate_images(model, image, ground_truth_encoding):\n",
     "    predicted_encoding = model(image, training=True)\n",
     "    \n",
-    "    predicted_field_centre = [predicted_encoding[0, 0, 0, 0], predicted_encoding[0, 0, 0, 1]]\n",
-    "    predicted_field_rotation = predicted_encoding[0, 0, 0, 2] * 90\n",
-    "    predicted_bb_centre = [predicted_encoding[0, 0, 0, 3], predicted_encoding[0, 0, 0, 4]]\n",
-    "    \n",
-    "    ground_field_centre = [ground_truth_encoding[0], ground_truth_encoding[1]]\n",
-    "    ground_field_rotation = ground_truth_encoding[2] * 90\n",
-    "    ground_bb_centre = [ground_truth_encoding[3], ground_truth_encoding[4]]\n",
+    "    predicted_field_centre, predicted_field_rotation, predicted_bb_centre = extract_items_from_encodings(predicted_encoding)\n",
+    "    ground_field_centre, ground_field_rotation, ground_bb_centre = extract_items_from_encodings(ground_truth_encoding)\n",
     "    \n",
     "    fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
     "        x, y, np.array(image)[0,:,:,0],\n",
@@ -898,7 +904,7 @@
    "outputs": [],
    "source": [
     "LAMBDA = 5\n",
-    "EPOCHS = 1"
+    "EPOCHS = 150"
    ]
   },
   {
