once more running without error

--- a/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
@@ -461,13 +461,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tf.function\n",
     "def decode_batch(encoding):\n",
     "    \n",
-    "    field_centre, field_rotation, bb_centre = extract_items_from_encodings(encodings)\n",
+    "    field_centre, field_rotation, bb_centre = extract_items_from_encodings(encoding)\n",
     "\n",
-    "    circle_mask = get_circle_mask(bb_centres)\n",
-    "    rect_mask = get_rect_mask(field_centres, field_rotations)\n",
+    "    circle_mask = get_circle_mask(bb_centre)\n",
+    "    rect_mask = get_rect_mask(field_centre, field_rotation)\n",
     "\n",
     "    mask = tf.concat([circle_mask[None,:,:,None], rect_mask[None,:,:,None]], axis=3)\n",
     "    \n",
