--- a/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/007-just-encoder-arm-pix2pix.ipynb
@@ -368,6 +368,7 @@
     "\n",
     "    dataset = tf.data.Dataset.from_tensor_slices((image_paths_array, labels_array))\n",
     "    dataset = dataset.map(load)\n",
+    "    dataset = dataset.shuffle(400)\n",
     "    \n",
     "    return dataset"
    ]
