update docs record id after a publish

--- a/examples/labs/maintenance/002-check-hash-of-current-version.ipynb
+++ b/examples/labs/maintenance/002-check-hash-of-current-version.ipynb
@@ -14,7 +14,8 @@
     "import urllib\n",
     "\n",
     "import requests\n",
-    "import keyring"
+    "import keyring\n",
+    "\n"
    ]
   },
   {
@@ -23,9 +24,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_URL = \"https://zenodo.org/api/records/\"\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymedphys._data.upload\n",
+    "import pymedphys._data.zenodo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "access_token = pymedphys._data.upload.get_zenodo_access_token('zenodo.org')\n",
+    "access_token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "record_id = 3596528"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_version_url = f\"https://zenodo.org/api/deposit/depositions/{record_id}/actions/newversion\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = pymedphys._data.upload.zenodo_api_with_helpful_fallback(new_version_url, 'post')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_record_id = int(r.json()['links']['latest_draft'].split('/')[-1])\n",
+    "new_record_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = pymedphys._data.upload.zenodo_api_with_helpful_fallback(f\"https://zenodo.org/api/deposit/depositions/{record_id}/files\", \"get\")\n",
+    "r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys._data.zenodo.get_all_zenodo_file_data_by_id(new_record_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
