--- a/examples/labs/rccc/monaco-trf-comparison/006-batch-mu-density-comparison.ipynb
+++ b/examples/labs/rccc/monaco-trf-comparison/006-batch-mu-density-comparison.ipynb
@@ -52,7 +52,7 @@
     "percent_deviation = 2\n",
     "mm_dist_threshold = 0.5\n",
     "\n",
-    "logfile_directory = pathlib.Path(r'D:\\OneDrive - Cancer Care Associates\\LinacLogFiles')\n",
+    "logfile_directory = pathlib.Path(r'D:\\LinacLogFiles')\n",
     "monaco_directory = pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical')\n",
     "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')"
    ]
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
